# veha-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  answer.rs  output.xhtml  qwen.md
.legacy/: qwen-xml.rs  qwen_b.rs
beispiel/: README.md  config.toml  eintrag.xhtml  index.md  index.xhtml  mdtest.xhtml  output.xhtml  pilotcsv.xhtml  row.xhtml  start.xhtml  test.csv  test.md
beispiel/buch/: eintrag.xhtml
beispiel/content/: config.toml
beispiel/daten/: warum.md
beispiel/seiten/: index.xhtml
beispiel/structure/: index.xhtml
beispiel/vorlagen/: eintrag.xhtml
beispiel/zukunft/: mdtest copy.xhtml
example/: map.csv  output.json
example/content/: about.en.md  supported-formats.csv  supported-formats.en.csv
example/db/: content.sqlite  index.sql
example/structure/: blog.xhtml  json.xhtml  sqlite.xhtml  srow.xhtml
example/template/: base.xhtml
src/: beide.rs  codegen.rs  csvmotor.rs  csvpilot.rs  main.rs  mdmotor.rs  motor.rs  qwen.rs  schreiben.rs  tabular.rs  teramotor.rs  tomlmotor.rs  utils.rs
src/machine/: binder.rs  press.rs
src/motor/: csv.rs  md.rs  sql.rs  sqlite.rs  toml.rs  xml.rs
src/processor/: collection.rs  page.rs  preprocess.rs  site.rs
