[package]
name = "veha"
version = "3.1.0"
authors = ["Isaak Engineer <i-engineer@tutamail.com>"]
license = "AGPL-3.0-only"
description = "Opinionanted static website generator: a CLI programm [written in Rust] to automate merging modular written data into a component based XHTML web-page"
readme = "README.md"
homepage = "https://veha.techne.schloosser.com"
repository = "https://git.schloosser.net/veha/veha-rs"
keywords = ["xhtml", "ssg"]
categories = ["command-line-utilities"]

edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5.28"
comrak = "0.35.0"
csv = "1.3.1"
env_logger = "0.11.7"
log = "0.4.26"
markdown = "1.0.0-alpha.22"
markdown-rs = "0.1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.20.0"
toml = "0.8.20"
xml = "0.8"
