[package]
name = "veha"
version = "4.0.0"
authors = ["Isaak Engineer <i-engineer@tutamail.com>"]
license = "AGPL-3.0-only"
description = "an open source utility that automates merging of written raw content and xml structures into web pages."
readme = "README.md"
homepage = "https://veha.techne.schloosser.com"
repository = "https://git.schloosser.net/veha/veha-rs"
keywords = ["utility", "xhtml", "ssr", "ssg", "engine", "template-engine"]
categories = ["command-line-utilities"]

edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5.28"
comrak = "0.35.0"
csv = "1.3.1"
env_logger = "0.11.7"
log = "0.4.26"
markdown = "1.0.0-alpha.22"
markdown-rs = "0.1.0"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.20.0"
toml = "0.8.20"
xml = "0.8"
